syntax = "proto3";

package greet;

service GreetService {
  // unary api
  rpc Greet (GreetRequest) returns (GreetResponse) {};

  // streaming api
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse);
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message Greeting {
  string firstName = 1;
  string lastName = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}