syntax = "proto3";

package sum;

service SumService {
  // unary api
  rpc Sum (SumRequest) returns (SumResponse) {};

  // server streaming api
  rpc Factor (FcatorRequest) returns (stream FactorResponses);
}

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 total = 1;
}

message FcatorRequest {
  int32 number = 1;
}

message FactorSuccessResponse {
  int32 number = 1;
}

message FactorFailResponse {
  bool error = 1;
  string message = 2;
}


message FactorResponses {
  oneof FactorResponse {
    FactorSuccessResponse factorSuccessResponse = 1;
    FactorFailResponse factorFailResponse = 2;
  }
  // Other variables
}
